After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 740997 - Easing modes are not used when computing the value of a KeyframeTransition
Easing modes are not used when computing the value of a KeyframeTransition
Status: RESOLVED FIXED
Product: clutter
Classification: Platform
Component: ClutterActor
git master
Other All
: Normal normal
: ---
Assigned To: clutter-maint
clutter-maint
Depends on:
Blocks:
 
 
Reported: 2014-12-01 19:20 UTC by sdegrande
Modified: 2014-12-11 23:16 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch to compute progress value using the frame easing mode (1.43 KB, patch)
2014-12-01 19:21 UTC, sdegrande
committed Details | Review

Description sdegrande 2014-12-01 19:20:23 UTC
An easing mode can be set on a frame of a KeyframeTransition.
However, the progress value of the current frame is computed using using a linear function.

The proposed patch adds a call to clutter_easing_for_mode() to compute the actual progress value.

Note that parametrized easing modes (bezier and 'step') are not taken into account.
Comment 1 sdegrande 2014-12-01 19:21:31 UTC
Created attachment 291945 [details] [review]
Patch to compute progress value using the frame easing mode
Comment 2 Emmanuele Bassi (:ebassi) 2014-12-11 23:15:42 UTC
thanks, pushed to clutter-1.22, will backport to clutter-1.20 in a bit.